name:                register-alloc
version:             0.1.0.0
synopsis:            A simple register allocator playground for teaching purposes
homepage:            https://github.com/jozefg/register-alloc
license:             MIT
license-file:        LICENSE
author:              Danny Gratzer
maintainer:          jozefg@cmu.edu
copyright:           2016 Danny Gratzer
category:            Language
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
library
  exposed-modules:     Language
                     , ControlFlowGraph
                     , Analysis
                     , Allocator
                     , Interpreter
  build-depends:       base >=4.0 && <5
                     , containers <= 1.0 && >= 0.3
                     , transformers <= 1.0 && >= 0.3
                     , mtl >= 2 && <= 3
  hs-source-dirs:      src
  default-language:    Haskell2010
